+ update index.css

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -261,3 +261,60 @@ footer{
         font-size: 30px;
     }
 }
+@media (max-width: 360px) {
+    #hallo{
+        grid-column: 2/5;
+        font-size: 40px;
+    }
+    .text_wrapper p{
+        font-size: 40px;
+    }
+    .text_wrapper h1, .text_wrapper h2{
+        font-size: 40px;
+    }
+    .text_wrapper{
+        margin-top: -15px;
+        grid-column: 1/10;
+        margin-left: 22vw;
+    }
+
+    #subtitle{
+        margin-top: -20px;
+        grid-column: 2/5;
+    }
+    #about_me{
+        margin-top: 60px;
+        width: 70vw;
+        height: 4vh;
+        font-size: 30px;
+    }
+}
+@media (max-width: 320px) {
+    #hallo{
+        grid-column: 2/5;
+        font-size: 40px;
+    }
+    .text_wrapper p{
+        font-size: 30px;
+    }
+    .text_wrapper h1, .text_wrapper h2{
+        font-size: 30px;
+    }
+    .text_wrapper{
+        margin-top: -15px;
+        grid-column: 1/10;
+        margin-left: 22vw;
+    }
+
+    #subtitle{
+        margin-top: -20px;
+        font-size: 20px;
+        grid-column: 2/5;
+    }
+    #about_me{
+        margin-top: 60px;
+        width: 70vw;
+        height: 4vh;
+        font-size: 30px;
+    }
+}
