+ add media query

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -391,8 +391,46 @@ footer{
         font-size: 30px;
         margin-top: 10px;
     }
-
 }
+
+@media (max-height: 812px) and (max-width: 375px) {
+    #hallo{
+        grid-column: 2/5;
+        font-size: 30px;
+    }
+    .text_wrapper p{
+        font-size: 30px;
+    }
+    .text_wrapper h1, .text_wrapper h2{
+        font-size: 30px;
+    }
+    .text_wrapper{
+        margin-top: -15px;
+        grid-column: 1/5;
+    }
+
+    #subtitle{
+        margin-top: -20px;
+        font-size: 20px;
+        grid-column: 2/5;
+    }
+    #about_me{
+        margin-top: 60px;
+        width: 70vw;
+        height: 4vh;
+        font-size: 30px;
+    }
+}
+
+
+
+@media (max-height: 1130px) and (max-width: 320px) {
+
+    #subtitle{
+        margin-top: 10px;
+    }
+}
+
 @media (max-height: 970px) {
 
     #navbar #links a{
